# Templates

./: README.md  figures.tex  macros.tex  titlepage.tex
c++/spoj_challenge/: README.md  SolutionTest.cpp
java/gradle-simple-project/: build.gradle
java/maven-simple-project/: pom.xml
java/maven-simple-project/src/main/java/com/qiubix/draft/: App.java
java/maven-simple-project/src/test/java/com/qiubix/draft/: AppTest.java
latex/: basic.tex  figures.tex
latex/report/: institute_report_template.tex
report/: report_template.tex
spoj_challenge/: CMakeLists.txt  Solution.hpp  main.cpp
